test_suite/alan-2022-examples/failing/002260_mutation.alan
source RQ begin get TG7[put 35] end
